# SDHCALMarlinProcessor

./: CMakeLists.txt
DifGeom/: sdhcalH2SEPT2017.json  sdhcalJUNE2016.json
include/: AnalogEfficiencyProcessor.h  AnalysisProcessor.h  AnalysisProcessorILD.h  EfficiencyProcessor.h  EfficiencyVsAngleProcessor.h  EnergyOfRun.h  LcioToRootProcessor.h
recoverXML/: H2Sept2017.xml
script/: AnalysisProcessor.py  AnalysisProcessorOnGrid.py  EfficiencyProcessor.py  EfficiencyProcessorOnGrid.py  EfficiencyProcessorOnLocal.py  LaunchAnalysisProcessorOnGrid.py  LcioToRootProcessor.py  launchAnalysis.py  launchEfficiencyProcessorOnGrid.py  runAnalogEfficiencyProcessor.sh  runAnalysisProcessor.sh  runEfficiencyProcessor.sh  runEfficiencyProcessorForAnalogHit.sh  runsdhcalEfficiencyProcessor.sh
src/: AnalogEfficiencyProcessor.cc  AnalysisProcessor.cc  AnalysisProcessor.cpp  AnalysisProcessorILD.cc  EfficiencyProcessor.cc  EfficiencyVsAngleProcessor.cc  LcioToRootProcessor.cc
